--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8737,205 +8737,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #097a51; }
+  background: #48af72; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #76ce30; }
+  background: #92e87b; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #3e0d07; }
+  background: #623f62; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #16ce10; }
+  background: #6f882d; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #9af5ad; }
+  background: #e64760; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #9aa354; }
+  background: #25a4bb; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #bf2dae; }
+  background: #65d876; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #4eb144; }
+  background: #280d08; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #bee34a; }
+  background: #d9cb68; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #490ebb; }
+  background: #1f5f83; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #93d75a; }
+  background: #7c50e7; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #2fd7b8; }
+  background: #eaaac6; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #d8c92d; }
+  background: #a359ee; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #ce453f; }
+  background: #01c480; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #ad195a; }
+  background: #ff6929; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #c48ae1; }
+  background: #46b230; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #472987; }
+  background: #eeff42; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #681e33; }
+  background: #13e315; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #9b1f39; }
+  background: #d8cef9; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #45eb5e; }
+  background: #a2c5e2; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #a74b1b; }
+  background: #9ea059; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #a288d0; }
+  background: #cbe2b2; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #ce34d0; }
+  background: #64d7c3; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #7f7272; }
+  background: #d1d1c9; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #fdebd8; }
+  background: #3a9d73; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #46b4ff; }
+  background: #c429c2; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #9959ba; }
+  background: #22fdd7; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #94d9c4; }
+  background: #e6f4d3; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #9f8c8b; }
+  background: #22e3bf; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #273211; }
+  background: #9fb3a3; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #e3f427; }
+  background: #1988ee; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #7e2290; }
+  background: #f3e44a; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #05e7e9; }
+  background: #c0ea95; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #881440; }
+  background: #2084a7; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #ec6914; }
+  background: #4b704a; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #84483e; }
+  background: #51e831; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #b80829; }
+  background: #8874f1; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #b6b173; }
+  background: #23eed9; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #f1386c; }
+  background: #ab8229; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #115ea8; }
+  background: #8e2c9c; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #1d71f3; }
+  background: #dc5488; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #cd6c83; }
+  background: #bcd0d7; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #88bf3d; }
+  background: #ee5960; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #e44735; }
+  background: #d0378c; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #64391f; }
+  background: #a51a87; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #e98e84; }
+  background: #4460e1; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #6d30ea; }
+  background: #153db6; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #945dd9; }
+  background: #641f38; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #2e1d3f; }
+  background: #7cd811; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #2cba1e; }
+  background: #c9319b; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #8f79e2; }
+  background: #cc364f; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #7a93d1; }
+  background: #fbedd7; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #bf1dc7; }
+  background: #ade75d; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #df3b28; }
+  background: #2a867d; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #6dd9cb; }
+  background: #f89ff5; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #808194; }
+  background: #b59b44; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #1a35ab; }
+  background: #159199; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #0b43f2; }
+  background: #3bab6c; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #3bb68c; }
+  background: #3478c7; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #5cb14f; }
+  background: #49a8e7; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #6bdb51; }
+  background: #20b973; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #9b908d; }
+  background: #198b9b; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #706e13; }
+  background: #adf0c5; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #f76bdf; }
+  background: #e5eca1; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #60db75; }
+  background: #87cec8; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #e4dd8e; }
+  background: #4734df; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #8654e7; }
+  background: #a2e660; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #e0b3ac; }
+  background: #38a80e; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #b75074; }
+  background: #30334a; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #817af4; }
+  background: #d305d9; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #a03487; }
+  background: #0e5f2e; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #0fd257; }
+  background: #0f6863; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #6858d1; }
+  background: #cb2a56; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #4bb11a; }
+  background: #dd7457; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #298a98; }
+  background: #b3a768; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #228565; }
+  background: #9aded2; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #dc2a8b; }
+  background: #b08fa7; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #b32658; }
+  background: #0a60ce; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #81386a; }
+  background: #d5d22c; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #90c559; }
+  background: #0eea9a; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #c923c3; }
+  background: #afd427; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #5ec2c7; }
+  background: #45dead; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #0c0ebd; }
+  background: #3d8e03; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #5d2304; }
+  background: #c5367a; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #f16b2d; }
+  background: #9992a7; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #58cdcb; }
+  background: #fa7285; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #43696c; }
+  background: #cb4b0d; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #95d09b; }
+  background: #a0be30; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #78cf1a; }
+  background: #a82fb8; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #26ffa3; }
+  background: #c899ae; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #125fe1; }
+  background: #2cfc35; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #761ec8; }
+  background: #bfd88c; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #6341ba; }
+  background: #7b25b3; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #f44f5c; }
+  background: #ef46aa; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #5bbad9; }
+  background: #0aa027; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #9f1326; }
+  background: #aff7b9; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #27a3d1; }
+  background: #b0218a; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #c54f79; }
+  background: #43fe60; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #de818f; }
+  background: #54eb43; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #f80238; }
+  background: #d4b0af; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -14996,6 +14996,10 @@ option {
     border-radius: 0px;
     -webkit-box-shadow: 3px 3px 0px 0px rgba(0, 0, 0, 0.31);
     box-shadow: 3px 3px 0px 0px rgba(0, 0, 0, 0.31); }
+    .dashoard-dropdwon-btns-div .dropdown-more-wrapper .dropdown-menu .pointer-top-img {
+      position: absolute;
+      top: -12px;
+      left: 6px; }
     .dashoard-dropdwon-btns-div .dropdown-more-wrapper .dropdown-menu a {
       text-decoration: none; }
   .dashoard-dropdwon-btns-div .dropdown-more-wrapper .dashboard-title-menu-dropdown {
@@ -15109,11 +15113,25 @@ option {
     margin-bottom: 0px; }
   .flex-column .custom-select {
     height: 36px !important;
-    background: #fff url(../images/down-arrow.svg) no-repeat scroll 97% 13px; }
+    background: #fff url(../images/down-arrow.svg) no-repeat scroll 97% 13px;
+    padding: 9px 10px; }
   .flex-column .yellow-box {
     width: 20px;
     height: 20px;
     background: #398d01; }
+  .flex-column .dropdown-with-img::after {
+    border: solid #808080 !important;
+    border-width: 0 2px 2px 0 !important;
+    display: inline-block;
+    padding: 4px !important;
+    margin-top: -7px;
+    right: 11px;
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg); }
+    .flex-column .dropdown-with-img::after .dropdown-with-img.active::after {
+      border-width: 0 0px 0px 0px !important;
+      transform: rotate(-135deg);
+      -webkit-transform: rotate(-135deg); }
 
 .modal-add-connections-wrapper .adapter-modal-field-row .width-auto {
   width: auto !important; }
@@ -15123,7 +15141,7 @@ option {
   display: grid;
   grid-template-columns: 28px auto;
   align-items: center;
-  padding: 7px 2px; }
+  padding: 6px 2px; }
   .select-top-header .dropdown-logo {
     width: auto !important; }
     .select-top-header .dropdown-logo img {
@@ -15164,7 +15182,7 @@ option {
 
 .modal-select-query-row {
   display: grid;
-  grid-template-columns: 68% auto auto;
+  grid-template-columns: 1fr 70px auto;
   grid-gap: 10px;
   align-items: center; }
 
@@ -15254,6 +15272,17 @@ option {
 
   .modal-add-connections-wrapper .adapter-modal-field-row .width-auto {
     width: auto !important; }
+
+  .device-seen-row-grid {
+    display: grid;
+    grid-template-columns: 67% auto auto;
+    grid-gap: 8px;
+    align-items: center;
+    border-bottom: 1px solid #cdcdd6;
+    padding: 9px; }
+
+  .dropdown-more-wrapper .dropdown-menu .pointer-top-img {
+    display: none !important; }
 
   .profile-box {
     padding: 10px; }
