--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8737,205 +8737,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #48af72; }
+  background: #3b88fa; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #92e87b; }
+  background: #d48252; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #623f62; }
+  background: #236fef; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #6f882d; }
+  background: #c7f790; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #e64760; }
+  background: #d6b6da; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #25a4bb; }
+  background: #f9a903; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #65d876; }
+  background: #afe38c; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #280d08; }
+  background: #d3a119; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #d9cb68; }
+  background: #2eba85; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #1f5f83; }
+  background: #be95c8; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #7c50e7; }
+  background: #3865e4; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #eaaac6; }
+  background: #034173; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #a359ee; }
+  background: #4102a7; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #01c480; }
+  background: #1948d5; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #ff6929; }
+  background: #6bbd28; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #46b230; }
+  background: #2a2acf; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #eeff42; }
+  background: #0f614b; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #13e315; }
+  background: #0aa8ad; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #d8cef9; }
+  background: #540977; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #a2c5e2; }
+  background: #5a6944; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #9ea059; }
+  background: #5d892d; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #cbe2b2; }
+  background: #cf12cd; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #64d7c3; }
+  background: #7cae2e; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #d1d1c9; }
+  background: #b5fd94; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #3a9d73; }
+  background: #0366c4; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #c429c2; }
+  background: #01e604; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #22fdd7; }
+  background: #0bd990; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #e6f4d3; }
+  background: #7454ab; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #22e3bf; }
+  background: #9dfd10; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #9fb3a3; }
+  background: #34024a; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #1988ee; }
+  background: #9f6cca; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #f3e44a; }
+  background: #560ab3; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #c0ea95; }
+  background: #880afc; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #2084a7; }
+  background: #58896d; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #4b704a; }
+  background: #a9ed3a; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #51e831; }
+  background: #e5f49d; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #8874f1; }
+  background: #2b0be7; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #23eed9; }
+  background: #e755d3; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #ab8229; }
+  background: #c38c86; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #8e2c9c; }
+  background: #7b12ee; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #dc5488; }
+  background: #f94d82; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #bcd0d7; }
+  background: #80c227; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #ee5960; }
+  background: #85d26b; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #d0378c; }
+  background: #9e4962; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #a51a87; }
+  background: #addddd; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #4460e1; }
+  background: #51a5b9; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #153db6; }
+  background: #be1443; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #641f38; }
+  background: #2fea54; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #7cd811; }
+  background: #cd87b5; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #c9319b; }
+  background: #ea0cae; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #cc364f; }
+  background: #e9f91f; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #fbedd7; }
+  background: #8fccae; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #ade75d; }
+  background: #22e2f5; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #2a867d; }
+  background: #6a5e55; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #f89ff5; }
+  background: #3c55d2; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #b59b44; }
+  background: #7980b1; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #159199; }
+  background: #631dbe; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #3bab6c; }
+  background: #294b0d; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #3478c7; }
+  background: #31b862; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #49a8e7; }
+  background: #289d10; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #20b973; }
+  background: #3d0aa6; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #198b9b; }
+  background: #9ead73; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #adf0c5; }
+  background: #176f21; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #e5eca1; }
+  background: #edcd4f; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #87cec8; }
+  background: #33b2a2; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #4734df; }
+  background: #084be0; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #a2e660; }
+  background: #0db3d6; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #38a80e; }
+  background: #8e0ad2; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #30334a; }
+  background: #496cd5; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #d305d9; }
+  background: #be107c; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #0e5f2e; }
+  background: #f4ebb6; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #0f6863; }
+  background: #d9ec78; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #cb2a56; }
+  background: #72f3c2; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #dd7457; }
+  background: #9a2aeb; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #b3a768; }
+  background: #f0df4d; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #9aded2; }
+  background: #eb80e0; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #b08fa7; }
+  background: #59ecdb; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #0a60ce; }
+  background: #8c9aef; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #d5d22c; }
+  background: #1e04dc; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #0eea9a; }
+  background: #87d1ef; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #afd427; }
+  background: #397c61; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #45dead; }
+  background: #23dc6a; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #3d8e03; }
+  background: #c830f3; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #c5367a; }
+  background: #16f356; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #9992a7; }
+  background: #5f93ab; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #fa7285; }
+  background: #fc4529; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #cb4b0d; }
+  background: #feff93; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #a0be30; }
+  background: #4f435c; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #a82fb8; }
+  background: #991bec; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #c899ae; }
+  background: #bb4169; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #2cfc35; }
+  background: #4da223; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #bfd88c; }
+  background: #0f2f78; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #7b25b3; }
+  background: #5c751f; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #ef46aa; }
+  background: #079df1; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #0aa027; }
+  background: #4bec45; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #aff7b9; }
+  background: #8ec219; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #b0218a; }
+  background: #af2cd3; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #43fe60; }
+  background: #5b2a92; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #54eb43; }
+  background: #015c80; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #d4b0af; }
+  background: #6ddbcf; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -14973,6 +14973,22 @@ option {
         font-size: 12px;
         text-decoration: none;
         margin: 5px 0px; }
+  .widget-box .widget-icons-bottom-div {
+    position: absolute;
+    bottom: 12px;
+    right: 16px; }
+    .widget-box .widget-icons-bottom-div .pointer-top-img {
+      position: absolute;
+      top: -12px;
+      right: 19px; }
+    .widget-box .widget-icons-bottom-div .dropdown-menu {
+      border-radius: 0px;
+      margin-left: -120px;
+      top: 6px !important; }
+      .widget-box .widget-icons-bottom-div .dropdown-menu a {
+        font-size: 12px;
+        text-decoration: none;
+        margin: 5px 0px; }
 
 .dashboard-search-with-dropdown .dropdown-menu {
   -webkit-box-shadow: 3px 3px 0px 0px rgba(0, 0, 0, 0);
@@ -15218,6 +15234,23 @@ option {
     height: 6px;
     background: #4cc0f5;
     display: inline-block; }
+
+.dashboard-top-title-div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  position: relative; }
+  .dashboard-top-title-div .adapter-modal-bottom-row {
+    margin-top: 0px; }
+
+.customize-grid-bg {
+  margin: 0;
+  padding: 24px;
+  width: 100%;
+  height: 100vh;
+  background-image: linear-gradient(rgba(4, 169, 180, 0.15) 0.1em, transparent 0.1em), linear-gradient(90deg, rgba(4, 169, 180, 0.15) 0.1em, transparent 0.1em);
+  background-size: 1em 1em; }
 
 @media screen and (max-width: 767px) {
   .system-settings-wrapper {
